--- a/clicktocal/config/locales/pt-BR.yml
+++ b/clicktocal/config/locales/pt-BR.yml
@@ -7,8 +7,15 @@ pt-BR:
   show: "Detalhes"
   destroy: "Remover"
   back: "Voltar"
-
+  financial: "Financeiro"
+  technical_support: "Suporte técnico"
+  attendance: "Atendimento"
   date:
+
+  messages:
+    record_number_created_successfully: "Número de registro criado com sucesso."
+    in_a_moment_we_will_contact_you: "Em instantes entraremos em contato com você."
+
     abbr_day_names:
     - Dom
     - Seg
@@ -107,6 +114,7 @@ pt-BR:
   errors:
     format: ! '%{attribute} %{message}'
     messages:
+      please_wait_in_a_moment_we_will_contact_you: "Por favor aguarde, em instantes entraremos em contato com você"
       accepted: deve ser aceito
       blank: não pode ficar em branco
       present: deve ficar em branco
@@ -220,8 +228,4 @@ pt-BR:
         ddd: "DDD"
         ip: ""
         carried_out: "Realizado"
-
-
-
-
-
+        department: "Departamento"
